--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Chinomso Asikogu
-logo: IMG_0715 GITHUB.jpg
+logo: github jpgg.jpg
 description: text below image
 show_downloads: false
-theme: jekyll-theme-minimal
+theme: jekyll-theme-midnight
