--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Chinomso Asikogu
 logo: github jpgg.jpg
 description: text below image
 show_downloads: false
-theme: jekyll-theme-midnight
+theme: jekyll-theme-minimal
