--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Chinomso Asikogu
 logo: github jpgg.jpg
-description: text below image
+description: Data Analyst
 show_downloads: false
 theme: jekyll-theme-minimal
